# events-face

./: manage.py  pyproject.toml
src/: urls.py
src/accounts/: serializers.py  urls.py  views.py
src/core/: settings.py
src/events/: apps.py  models.py  serializer.py  serializers.py  task.py  urls.py  views.py
src/events/migrations/: 0001_initial.py  0002_alter_event_date_alter_event_name_alter_event_place_and_more.py  0003_registration.py  0004_event_registration_deadline.py
src/sync/: admin.py  models.py
src/sync/management/commands/: del_old_events.py  sync_events.py
src/sync/migrations/: 0001_initial.py
